src/objects/Radicacion_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>Numero_de_consultas_codeudor3__c</fullName>
        <label>Número de consultas codeudor3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_Deudor__c</fullName>
        <label>Número de documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor1__c</fullName>
        <label>Número de documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_2__c</fullName>
        <label>Número de documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_3__c</fullName>
        <label>Número de documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_u_oficio_principal__c</fullName>
        <label>Ocupación u oficio principal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Estudiante</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Empleado con Negocio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ocupacion_u_oficio_principal_codeudor1__c</fullName>
        <label>Ocupación u oficio principal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
                <value>
                    <fullName>Estudiante</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ocupacion_u_oficio_principal_codeudor2__c</fullName>
        <label>Ocupación u oficio principal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
                <value>
                    <fullName>Estudiante</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ocupacion_u_oficio_principal_codeudor3__c</fullName>
        <label>Ocupación u oficio principal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
                <value>
                    <fullName>Estudiante</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oficina__c</fullName>
        <label>Oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina_codeudor1__c</fullName>
        <label>Oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina_codeudor2__c</fullName>
        <label>Oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oficina_codeudor3__c</fullName>
        <label>Oficina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otra_nacionalidad__c</fullName>
        <label>Otra nacionalidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otra_nacionalidad_codeudor1__c</fullName>
        <label>Otra nacionalidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otra_nacionalidad_codeudor2__c</fullName>
        <label>Otra nacionalidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otra_nacionalidad_codeudor3__c</fullName>
        <label>Otra nacionalidad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otras_obligaciones__c</fullName>
        <label>Otras obligaciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otras_obligaciones_codeudor1__c</fullName>
        <label>Otras obligaciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otras_obligaciones_codeudor2__c</fullName>
        <label>Otras obligaciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otras_obligaciones_codeudor3__c</fullName>
        <label>Otras obligaciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otras_obligaciones_deudor_c__c</fullName>
        <label>Otras obligaciones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otros_creditos__c</fullName>
        <label>Otros créditos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otros_egresos__c</fullName>
        <label>Otros egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otros_egresos_codeudor1__c</fullName>
        <label>Otros egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otros_egresos_codeudor2__c</fullName>
        <label>Otros egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Otros_egresos_codeudor3__c</fullName>
        <label>Otros egresos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>País</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_codeudor1__c</fullName>
        <label>País</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_codeudor2__c</fullName>
        <label>País</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_codeudor3__c</fullName>
        <label>País</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parentesco_con_el_primer_codeudor1__c</fullName>
        <label>Parentesco con el primer solicitante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parentesco_con_el_primer_codeudor2__c</fullName>
        <label>Parentesco con el primer solicitante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parentesco_con_el_primer_codeudor3__c</fullName>
        <label>Parentesco con el primer solicitante</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parentesco_falimiar_codeudor3__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mamá</fullName>
                </value>
                <value>
                    <fullName>Papá</fullName>
                </value>
                <value>
                    <fullName>Hijo(a)</fullName>
                </value>
                <value>
                    <fullName>Hermano(a)</fullName>
                </value>
                <value>
                    <fullName>Tío(a)</fullName>
                </value>
                <value>
                    <fullName>Sobrino(a)</fullName>
                </value>
                <value>
                    <fullName>Primo (a)</fullName>
                </value>
                <value>
                    <fullName>Suegro(a)</fullName>
                </value>
                <value>
                    <fullName>Nieto(a)</fullName>
                </value>
                <value>
                    <fullName>Cuñado(a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_familiar__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mamá</fullName>
                </value>
                <value>
                    <fullName>Papá</fullName>
                </value>
                <value>
                    <fullName>Hijo(a)</fullName>
                </value>
                <value>
                    <fullName>Hermano(a)</fullName>
                </value>
                <value>
                    <fullName>Tío(a)</fullName>
                </value>
                <value>
                    <fullName>Sobrino(a)</fullName>
                </value>
                <value>
                    <fullName>Primo (a)</fullName>
                </value>
                <value>
                    <fullName>Suegro(a)</fullName>
                </value>
                <value>
                    <fullName>Nieto(a)</fullName>
                </value>
                <value>
                    <fullName>Cuñado(a)</fullName>
                </value>
                <value>
                    <fullName>Yerno</fullName>
                </value>
                <value>
                    <fullName>Nuera</fullName>
                </value>
                <value>
                    <fullName>Abuelo (a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_familiar_codeduor1__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mamá</fullName>
                </value>
                <value>
                    <fullName>Papá</fullName>
                </value>
                <value>
                    <fullName>Hijo(a)</fullName>
                </value>
                <value>
                    <fullName>Hermano(a)</fullName>
                </value>
                <value>
                    <fullName>Tío(a)</fullName>
                </value>
                <value>
                    <fullName>Sobrino(a)</fullName>
                </value>
                <value>
                    <fullName>Primo(a)</fullName>
                </value>
                <value>
                    <fullName>Suegro(a)</fullName>
                </value>
                <value>
                    <fullName>Nieto(a)</fullName>
                </value>
                <value>
                    <fullName>Cuñado(a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_familiar_codeudor2__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mamá</fullName>
                </value>
                <value>
                    <fullName>Papá</fullName>
                </value>
                <value>
                    <fullName>Hijo(a)</fullName>
                </value>
                <value>
                    <fullName>Hermano(a)</fullName>
                </value>
                <value>
                    <fullName>Tío(a)</fullName>
                </value>
                <value>
                    <fullName>Sobrino(a)</fullName>
                </value>
                <value>
                    <fullName>Primo(a)</fullName>
                </value>
                <value>
                    <fullName>Suegro(a)</fullName>
                </value>
                <value>
                    <fullName>Nieto(a)</fullName>
                </value>
                <value>
                    <fullName>Cuñado(a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_personal__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amigo(a)</fullName>
                </value>
                <value>
                    <fullName>Compañero (a) de trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_personal_codeudor1__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amigo(a)</fullName>
                </value>
                <value>
                    <fullName>Compañero (a) de trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_personal_codeudor2__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amigo(a)</fullName>
                </value>
                <value>
                    <fullName>Compañero (a) de trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parentesco_personal_codeudor3__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amigo(a)</fullName>
                </value>
                <value>
                    <fullName>Compañero (a) de trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parqueadero__c</fullName>
        <label>Parqueadero</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Nombre_y_Apellido__c</fullName>
        <label>Personal -  Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Nombre_y_Apellido_codeudor1__c</fullName>
        <label>Personal - Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Nombre_y_Apellido_codeudor2__c</fullName>
        <label>Personal - Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Nombre_y_Apellido_codeudor3__c</fullName>
        <label>Personal - Nombre y Apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personas_que_van_a_vivir_en_el_inmueble__c</fullName>
        <inlineHelpText>Cantidad de personas que vivirán en el inmueble</inlineHelpText>
        <label>Personas que van a vivir en el inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pignorado_activo2__c</fullName>
        <label>Pignorado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pignorado_activo__c</fullName>
        <label>Pignorado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placa_activo2__c</fullName>
        <label>Placa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placa_activo__c</fullName>
        <label>Placa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo_en_anos__c</fullName>
        <label>Plazo en años</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profesion_o_actividad_codeudor1__c</fullName>
        <label>Profesión o actividad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profesion_o_actividad_codeudor2__c</fullName>
        <label>Profesión o actividad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profesion_o_actividad_codeudor3__c</fullName>
        <label>Profesión o actividad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profesion_u_oficio__c</fullName>
        <label>Profesión u oficio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.MiddleName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyecto</label>
        <referenceTo>Proyecto__c</referenceTo>
        <relationshipLabel>Radicaciones de créditos</relationshipLabel>
        <relationshipName>Radicaciones_de_creditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proyecto_que_recibe_la_solicitud__c</fullName>
        <label>Proyecto que recibe la solicitud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inmobiliaria</fullName>
                </value>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Sala de ventas</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Referido</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proyecto_r__c</fullName>
        <formula>Solicitud_de_credito__r.Proyecto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proyecto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realiza_operaciones_de_moneda_codeudor1__c</fullName>
        <label>Realiza operaciones de moneda extranjera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realiza_operaciones_de_moneda_codeudor2__c</fullName>
        <label>Realiza operaciones de moneda extranjera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realiza_operaciones_de_moneda_codeudor3__c</fullName>
        <label>Realiza operaciones de moneda extranjera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realiza_operaciones_de_moneda_extranjera__c</fullName>
        <label>Realiza operaciones de moneda extranjera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recursos_propios__c</fullName>
        <label>Recursos propios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registro_cambiario__c</fullName>
        <label>Registro cambiario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Cta Compensación</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registro_cambiario_codeudor1__c</fullName>
        <label>Registro cambiario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Cta Compensación</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registro_cambiario_codeudor2__c</fullName>
        <label>Registro cambiario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Cta Compensación</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registro_cambiario_codeudor3__c</fullName>
        <label>Registro cambiario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Cta Compensación</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rentas__c</fullName>
        <label>Rentas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rentas_codeudor1__c</fullName>
        <label>Rentas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rentas_codeudor2__c</fullName>
        <label>Rentas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rentas_codeudor3__c</fullName>
        <label>Rentas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resultados_de_la_entrevista__c</fullName>
        <label>Resultados de la entrevista</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salario_ingreso_mensual__c</fullName>
        <label>Salario/ ingreso* (mensual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salario_ingreso_mensual_codeudor1__c</fullName>
        <label>Salario/ ingreso* (mensual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salario_ingreso_mensual_codeudor2__c</fullName>
        <label>Salario/ ingreso* (mensual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salario_ingreso_mensual_codeudor3__c</fullName>
        <label>Salario/ ingreso* (mensual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_deuda_activo2__c</fullName>
        <label>Saldo deuda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_deuda_activo__c</fullName>
        <label>Saldo deuda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_hipoteca_activo2__c</fullName>
        <label>Saldo hipoteca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_hipoteca_activo__c</fullName>
        <label>Saldo hipoteca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sector_financiero__c</fullName>
        <label>Sector financiero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sector_financiero_codeudor1__c</fullName>
        <label>Sector financiero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sector_financiero_codeudor2__c</fullName>
        <label>Sector financiero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sector_financiero_codeudor3__c</fullName>
        <label>Sector financiero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Servicios_publicos__c</fullName>
        <label>Servicios públicos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Servicios_publicos_codeudor1__c</fullName>
        <label>Servicios públicos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Servicios_publicos_codeudor2__c</fullName>
        <label>Servicios públicos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Servicios_publicos_codeudor3__c</fullName>
        <label>Servicios públicos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sexo_Deudor__c</fullName>
        <formula>TEXT(Cliente_deudor__r.Sexo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sexo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexo_codeduor2__c</fullName>
        <formula>TEXT(Codeudor_2__r.Sexo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sexo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexo_codeudor1__c</fullName>
        <formula>TEXT(Codeudor_1__r.Sexo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sexo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexo_codeudor3__c</fullName>
        <formula>TEXT( Codeudor_3__r.Sexo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sexo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Radicaciones de créditos</relationshipLabel>
        <relationshipName>Radicaciones_de_creditos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subsidio_de_vivienda__c</fullName>
        <label>Subsidio de vivienda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subsidios__c</fullName>
        <label>Subsidios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subsidios_codeudor1__c</fullName>
        <label>Subsidios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subsidios_codeudor2__c</fullName>
        <label>Subsidios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subsidios_codeudor3__c</fullName>
        <label>Subsidios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tarjeta_de_credito_codensa__c</fullName>
        <label>Tarjeta de crédito codensa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tarjeta_de_credito_codensa_codeudor1__c</fullName>
        <label>Tarjeta de crédito codensa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tarjeta_de_credito_codensa_codeudor2__c</fullName>
        <label>Tarjeta de crédito codensa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tarjeta_de_credito_codensa_codeudor3__c</fullName>
        <label>Tarjeta de crédito codensa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telefono_Actividad_economica__c</fullName>
        <label>Teléfono</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_arrendador_1__c</fullName>
        <label>Teléfono arrendador (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_arrendador_2__c</fullName>
        <label>Teléfono arrendador (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_comercial__c</fullName>
        <label>Teléfono</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_comercial_codeudor1__c</fullName>
        <label>Teléfono</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_comercial_codeudor2__c</fullName>
        <label>Teléfono</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_comercial_codeudor3__c</fullName>
        <label>Teléfono</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_de_la_oficina_codeudor1__c</fullName>
        <label>Teléfono de la oficina</label>
        <length>7</length>
        <type>Text</type>
    </fields>
</CustomObject>